grammar.txt
TERMINALS:

PLUS
MINUS
STAR
SLASH
LPAR
RPAR
SEMICOLON
EQUALS
PERCENT
NUMBER
IDENTIFIER
STRING
PRINT
LET
EOF

---------------------------------------------
GRAMMAR:

script -> statement* EOF

statement -> PRINT expression SEMICOLON | LET IDENTIFIER [EQUALS expression] SEMICOLON | expression SEMICOLON

expression -> IDENTIFIER EQUALS expression | arithmatic

arithmatic -> term | arithmatic PLUS term | arithmatic MINUS term

term -> factor | term STAR factor | term SLASH factor | term PERCENT factor

factor -> MINUS* (IDENTIFIER | NUMBER | LPAR arithmatic RPAR | STRING)

---------------------------------------------
GRAMMAR WITHOUT LEFT RECURSION:

script -> statement* EOF

statement -> PRINT expression SEMICOLON | LET IDENTIFIER [EQUALS expression] SEMICOLON | expression SEMICOLON

expression -> IDENTIFIER EQUALS expression | arithmatic

arithmatic -> term [rightExpression]
rightExpression -> PLUS term [rightExpression] | MINUS term [rightExpression]

term -> factor [rightTerm]
rightTerm -> STAR factor [rightTerm] | SLASH factor [rightTerm] | PERCENT factor [rightTerm]

factor -> MINUS* (IDENTIFIER | NUMBER | LPAR arithmatic RPAR | STRING)
